@startuml

title __CUSTOM's Class Diagram__\n

  namespace fr.foundation.modwizard {
    namespace view {
      namespace custom {
        abstract class fr.foundation.modwizard.view.custom.CustomPanelForDynamicPanelOfJComponent {
            - customPanel : JPanel
            - jComponentToStringList : ArrayList<String>
            + CustomPanelForDynamicPanelOfJComponent()
            + addButton()
            + getCustomPanel()
            + getJComponentToStringList()
            + repack()
            {abstract} # createCustomJComponentLine()
            {abstract} # getValuesOfJComponents()
            {abstract} # setButtonMinusAction()
            {abstract} # setButtonPlusAction()
        }
      }
    }
  }
  

  namespace fr.foundation.modwizard {
    namespace view {
      namespace custom {
        class fr.foundation.modwizard.view.custom.Frame {
            + Frame()
        }
      }
    }
  }
  

  namespace fr.foundation.modwizard {
    namespace view {
      namespace custom {
        class fr.foundation.modwizard.view.custom.MyEnumComboBox {
            ~ cbx : JComboBox
            + MyEnumComboBox()
            + getCbx()
            - addEnumValuesTo()
        }
      }
    }
  }
  

  namespace fr.foundation.modwizard {
    namespace view {
      namespace custom {
        class fr.foundation.modwizard.view.custom.SubPanelBuildingPart {
            + getValuesOfJComponents()
            # createCustomJComponentLine()
            # setButtonMinusAction()
            # setButtonPlusAction()
        }
      }
    }
  }
  

  namespace fr.foundation.modwizard {
    namespace view {
      namespace custom {
        class fr.foundation.modwizard.view.custom.SubPanelVillagerRequired {
            # createCustomJComponentLine()
            # getValuesOfJComponents()
            # setButtonMinusAction()
            # setButtonPlusAction()
        }
      }
    }
  }
  

  fr.foundation.modwizard.view.custom.Frame -up-|> javax.swing.JFrame
  fr.foundation.modwizard.view.custom.MyEnumComboBox -up-|> javax.swing.JComboBox
  fr.foundation.modwizard.view.custom.SubPanelBuildingPart -up-|> fr.foundation.modwizard.view.custom.CustomPanelForDynamicPanelOfJComponent
  fr.foundation.modwizard.view.custom.SubPanelVillagerRequired -up-|> fr.foundation.modwizard.view.custom.CustomPanelForDynamicPanelOfJComponent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
